--- a/package.json
+++ b/package.json
@@ -3,8 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+	  "build": "webpack --mode production",
+	  "start": "npm run build; node main.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^9.2.1",
+    "cors": "^2.8.5",
+    "css-loader": "^7.1.2",
+    "express": "^4.21.1",
+    "html-webpack-plugin": "^5.6.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
+  }
 }
