--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-	  "build": "webpack --mode production",
-	  "start": "npm run build; node main.js"
+    "build": "webpack --mode production",
+    "start": "npm run build; node main.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +15,14 @@
     "@babel/preset-react": "^7.25.9",
     "babel-loader": "^9.2.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
     "express": "^4.21.1",
     "html-webpack-plugin": "^5.6.3",
+    "mysql2": "^3.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sequelize": "^6.37.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
