--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npm run build; node main.js",
+    "start": "npm run build && node main.js",
     "dev": "concurrently --kill-others-on-fail \"webpack --mode production --watch\" \"npx nodemon main.js\""
   },
   "author": "",
@@ -19,16 +19,17 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
-    "mysql2": "^3.11.5",
-    "sequelize": "^6.37.5",
-    "style-loader": "^4.0.0",
     "express": "^4.21.1",
     "html-webpack-plugin": "^5.6.3",
+    "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
     "nodemon-webpack-plugin": "^4.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^6.28.0",
+    "sequelize": "^6.37.5",
+    "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
