--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "style-loader": "^4.0.0"
   }
 }
