--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "axios": "^1.7.9",
     "babel-loader": "^9.2.1",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
