--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.25.9",
     "axios": "^1.7.9",
     "babel-loader": "^9.2.1",
+    "bootstrap": "^5.3.3",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -26,6 +27,7 @@
     "nodemon": "^3.1.7",
     "nodemon-webpack-plugin": "^4.8.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
