--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.26.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -28,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.3",
     "sequelize": "^6.37.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
