--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "nodemon": "^3.1.7",
     "nodemon-webpack-plugin": "^4.8.2",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "sequelize": "^6.37.5",
     "style-loader": "^4.0.0",
+    "universal-cookie": "^7.2.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
