--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "- log in ## Administrator: - overview pentru grupurile de evenimente - pop up pentru un formular de adaugare - detalii eveniment - export per eveniment ## Participant: - interfata prezentarea evenimentelor - timeline - pagina descriere --> inscriere - meniu utilizator (optional)",
   "dependencies": {
     "@babel/preset-env": "^7.26.0",
+    "@railway/cli": "^3.20.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "browser-image-compression": "^2.0.2",
@@ -33,8 +34,8 @@
     "react-toastify": "^11.0.3",
     "sequelize": "^6.37.5",
     "style-loader": "^4.0.0",
-    "url-loader": "^4.1.1",
     "universal-cookie": "^7.2.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
